--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -1,6 +1,10 @@
 ---
-title: "Disturbance Assimilation"
-author: "Michael Dietze"
+title: "Assimilating disturbance: Toward real-time monitoring and forecasting"
+author:
+  - Michael C. Dietze, Earth and Environment, Boston University, Boston, MA
+  - Shawn P. Serbin, Environmental and Climate Sciences Department, Brookhaven National Laboratory, Upton, NY
+  - Robert Kennedy, Geography, Environmental Sciences, and Marine Resource Management, Oregon State University, Corvallis, OR
+  - Beverly E. Law, Forest Ecosystems & Society, Oregon State University, Corvallis, OR
 date: '`r Sys.Date()`'
 output:
   pdf_document: 
@@ -21,6 +25,10 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Abstract {-}
+
+Current approaches to bottom-up disturbance monitoring rely heavily on the detection of land-use, land-use change, and forestry (LULUCF) through remote sensing, but often account for ecosystem impacts using simple look-up tables. By contrast, process models are frequently used to analyze and predict disturbance dynamics in greater detail. Once observations are available, however, we need to update predictions, especially for stochastic processes such as disturbance. State data assimilation (SDA) is designed specifically to update predictions, nudging modeled states back toward reality in proportion to the uncertainties in the model and the data, but current SDA algorithms are designed to update continuous states, not discrete disturbances. Here we develop a new Bayesian SDA algorithm that combines a discrete Multinomial state-and-transition framework with conventional ensemble filtering SDA approaches. To demonstrate the potential for assimilating disturbance, we applied the Multinomial SDA to the Very Simple Ecosystem Model (VSEM), performing both simulated data experiments with known disturbances and testing the algorithm against real-world disturbances detected in the LandTrender data product for central Oregon.
+
+With simulated disturbance we demonstrate the ability to not only detect discrete disturbance events but also avoid false positives. We also demonstrated the ability to fuse multiple data types to successfully distinguish different disturbance types, and to probabilistically capture vegetation type ‘switching’ events within the assimilation and ensemble forecast. To apply this to real-world data we calibrated VSEM against eddy-covariance and ancillary data from the Ameriflux US-Me2 tower. We then selected 356 conifer forest sites for testing, using the Landtrendr disturbance product to stratify by four disturbance types (cut, burn, pest, and other). We then assimilated the 30m Landtrendr annual aboveground biomass product from 1990-2017 and assessed the rate of disturbance detection. Assimilating just AGB, our assimilation was sensitive to disturbances that reduced biomass by 1.5 kg/m2 but underpredicted defoliation disturbances, which we expect would be improved by also assimilating LAI. Moving forward, the SDA framework provides an exciting opportunity to fuse multiple data sources to holistically improve real-time disturbance detection, impact assessment (e.g. carbon sequestration), and forecasts of both disturbance events and post-disturbance recovery within a single integrated system.
 
 # Intro
 
@@ -67,5 +75,9 @@ knitr::opts_chunk$set(echo = TRUE)
 # Acknowledgements
 
 NASA CMS, PEcAn, NEFI
+
+<!---- SUPPLEMENTAL MATERIAL --->
+```{r child = 'supplemental.Rmd'}
+```
 
 # Bibliography
